updated scrolling functionality, removed visible scroll bar, and fixed position stops of elements. TODO: fix scroll registering after elements reach stop, Adjust positions for better UX.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
 @import "tailwindcss";
 
 
+body::-webkit-scrollbar {
+    display: none; /* For Chrome, Safari, and Edge */
+  }
